Fixed a few issues with spacing and syntax

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1905,9 +1905,7 @@ h3 .dark-rainbow {
   		-webkit-text-fill-color: transparent;
 }
 
-.catagories {
-	
-}
+
 
 /* List */
 
